fixed carousel on mobile
Missed a mobile version of the class for active slides while refactoring.

--- a/app/styles/home/_carousel.scss
+++ b/app/styles/home/_carousel.scss
@@ -21,7 +21,7 @@
   @media screen and (max-width: 948px) {
     height: initial;
 
-    &__active {
+    &__slide--active {
       position: relative;
     }
   }
